--- a/Reportes_en_linea.html
+++ b/Reportes_en_linea.html
@@ -447,27 +447,27 @@
             <div class="contentlisting__card">
     
                 <div class="contentlisting__card__title">
-                    <h4>Qué más información obtengo?</h4>
+                    <h4 style="font-family: Arial, Helvetica, sans-serif;">Qué más información obtengo?</h4>
                 </div>
                 <div class="contentlisting__card__content" style="font-size: 18px;">
                     <div class="OutlineElement Ltr BCX0 SCXW39245277" style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: stretch;"> <!-- Modified Flexbox setup for full vertical stretch -->
-                        <ul class="dt-sc-fancy-list circle-bullet" style="flex: 1; min-width: 250px; padding: 10px; display: flex; flex-direction: column; justify-content: space-between;"> <!-- Adjusted for vertical distribution -->
-                            <li style="margin-bottom: 20px;font-size: 23px;">Resumen de Movimientos de sus mercancías</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Descargar en formato .XLS o . PDF</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Mercancías cruzadas en periodo personalizado</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Mercancías listas para cruce</li>
+                        <ul class="dt-sc-fancy-list circle-bullet" style="flex: 1; min-width: 250px; padding: 10px; display: flex; flex-direction: column; justify-content: space-between; "> <!-- Adjusted for vertical distribution -->
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Resumen de Movimientos de sus mercancías</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Descargar en formato .XLS o . PDF</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Mercancías cruzadas en periodo personalizado</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Mercancías listas para cruce</li>
                         </ul>
                         <ul class="dt-sc-fancy-list circle-bullet" style="flex: 1; min-width: 250px; padding: 10px; display: flex; flex-direction: column; justify-content: space-between;">
-                            <li style="margin-bottom: 20px;font-size: 23px;">Mercancías pendientes de anticipo</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Actualización de mercancías recibidas</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Comparativo de embarques recibidos y cruzados</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Estadísticas diarias y mensuales</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Mercancías pendientes de anticipo</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Actualización de mercancías recibidas</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Comparativo de embarques recibidos y cruzados</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Estadísticas diarias y mensuales</li>
                         </ul>
                         <ul class="dt-sc-fancy-list circle-bullet" style="flex: 1; min-width: 250px; padding: 10px; display: flex; flex-direction: column; justify-content: space-between;">
-                            <li style="margin-bottom: 20px;font-size: 23px;">Estadísticas de tiempos de mercancía en bodega</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Consulta de documentos de su operación de comercio (Pedimento, COVE, etc.)</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Facturas de su mercancía</li>
-                            <li style="margin-bottom: 20px;font-size: 23px;">Pedimento y expediente</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Estadísticas de tiempos de mercancía en bodega</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Consulta de documentos de su operación de comercio (Pedimento, COVE, etc.)</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Facturas de su mercancía</li>
+                            <li style="margin-bottom: 20px;font-size: 23px; font-family: Arial, Helvetica, sans-serif;">Pedimento y expediente</li>
                         </ul>
                     </div>
                 </div>
@@ -532,7 +532,7 @@
                 <div class="col-12 col-md-3 mb-md-7 mb-5">
                     <a href="http://200.94.129.58/slamweb/login.aspx" target="_self" class="contentlisting__card">
                         <div class="contentlisting__card__title">
-                            <h4>
+                            <h4 style="font-family: Arial, Helvetica, sans-serif;">
                                 NVO. LAREDO / COLOMBIA
                             </h4>
                         </div>
@@ -542,7 +542,7 @@
                 <div class="col-12 col-md-3 mb-md-7 mb-5">
                     <a href="http://189.254.241.86/slamweb/login.aspx" target="_self" class="contentlisting__card">
                         <div class="contentlisting__card__title">
-                            <h4>
+                            <h4 style="font-family: Arial, Helvetica, sans-serif;">
                                 LÁZARO CÁRDENAS
                             </h4>
                         </div>
@@ -552,7 +552,7 @@
                 <div class="col-12 col-md-3 mb-md-7 mb-5">
                     <a href="http://200.94.129.58/SLAMWEB/login.aspx" target="_self" class="contentlisting__card">
                         <div class="contentlisting__card__title">
-                            <h4>
+                            <h4 style="font-family: Arial, Helvetica, sans-serif;">
                                 Aeropuerto CD. de Mexico
                             </h4>
                         </div>
@@ -562,7 +562,7 @@
                 <div class="col-12 col-md-3 mb-md-7 mb-5">
                     <a href="http://200.94.129.58/SLAMWEB/login.aspx" target="_self" class="contentlisting__card">
                         <div class="contentlisting__card__title" >
-                            <h4>
+                            <h4 style="font-family: Arial, Helvetica, sans-serif;">
                                 Veracruz
                             </h4>
                         </div>
