--- a/Home.html
+++ b/Home.html
@@ -1720,7 +1720,8 @@ Championing climate action with our global carbon commitment                    
 
     </div>
 </div>
-<section id = "contact" class="contact" style="background-color: #2f4d7f;background-image: url(https://images4.alphacoders.com/879/thumb-1920-879683.jpg);"  data-scroll-index="7">
+<div style="background-color: #00142b;">
+<section id = "contact" class="contact" style="background-image: url(https://images4.alphacoders.com/879/thumb-1920-879683.jpg); background-repeat: no-repeat;"  data-scroll-index="7">
     <style>
         .overlay {
     background-image: linear-gradient(to right, rgba(51, 82, 141, 0.795), rgba(51, 82, 141, 0.795));
@@ -2020,6 +2021,8 @@ display: inline-block;
      </div>
         </div>
   </section>
+</div>
+
 <style>
     /* Aligns the items vertically in the footer */
 .footer .row {
