--- a/Home.html
+++ b/Home.html
@@ -886,6 +886,7 @@ Championing climate action with our global carbon commitment                    
   justify-content: space-around;
   margin-bottom: 1em;
   font-family: Grosvenor Headline;
+  
 }
 
 .tab-button {
@@ -899,6 +900,7 @@ Championing climate action with our global carbon commitment                    
   color: #fff;
   font-weight: 600;
   font-family: Grosvenor Headline;
+  width: 100%;
 }
 
 .tab-button:hover, .tab-button.active {
