images + some other minor changes

--- a/Home.html
+++ b/Home.html
@@ -1056,7 +1056,7 @@ Championing climate action with our global carbon commitment                    
         #exchangeRateDisplay {
     position: sticky;
     top: 0; /* Adjust as necessary, typically 0 */
-    z-index: 10; /* Higher z-index ensures it stays on top of other content */
+    z-index: 1; /* Higher z-index ensures it stays on top of other content */
 }
 
 
@@ -1352,7 +1352,7 @@ Championing climate action with our global carbon commitment                    
 
                     <div class="twobyonewidget__box__image twobyonewidget__box__image--centeralign
 						  
-						  twobyonewidget__box__image--overlay" style="background-image: url(&#39;./Images/documentacion.webp&#39; ); background-color: #0000003b;">
+						  twobyonewidget__box__image--overlay" style="background-image: url(&#39;./Images/documents.png&#39; ); background-color: #0000003b;">
                     </div>
                     
 
