--- a/Reportes_en_linea.html
+++ b/Reportes_en_linea.html
@@ -401,7 +401,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="contentlisting__title">
-                        <h5>A través de esta opción usted puede verificar en el momento que lo desee el inventario de su mercancía en nuestra bodega IMZA Forwarding en Laredo, Texas. Así como status de sus embarques por las aduanas de Lázaro Cárdenas, Nuevo Laredo, Manzanillo, Veracruz y el Aeropuerto de la Ciudad de México.
+                        <h5  class="Paragraph SCXW260282758 BCX8" style="font-family: 'Times New Roman', Times, serif">A través de esta opción usted puede verificar en el momento que lo desee el inventario de su mercancía en nuestra bodega IMZA Forwarding en Laredo, Texas. Así como status de sus embarques por las aduanas de Lázaro Cárdenas, Nuevo Laredo, Manzanillo, Veracruz y el Aeropuerto de la Ciudad de México.
 
                         </h5>
                     </div>
