--- a/Home.html
+++ b/Home.html
@@ -1322,7 +1322,7 @@ Championing climate action with our global carbon commitment                    
                 element.className = 'article';
                 element.innerHTML = `
                     <h5>${article.Title}</h5>
-                    <p>${article.Summary}</p>
+                    <p style="font-family:Arial">${article.Summary}</p>
                     <img src="${article.Image}" alt="Article Image">
                     <br>
                     <a href="${article.Link}" target="_blank">Leer Más</a>
