--- a/Home.html
+++ b/Home.html
@@ -1305,7 +1305,40 @@ Championing climate action with our global carbon commitment                    
             });
     });
 </script> -->
+<script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+        const header = document.querySelector('header');
+        const navList = header.querySelector('.topnav__list');
+        const menuItem = navList.querySelector('.topnav__menuButton').closest('li');
 
+        // Function to handle class changes
+        const handleClassChange = () => {
+            if (header.classList.contains('js-is-sticky') && header.classList.contains('js-is-sticky--change')) {
+                if (!navList.querySelector('.cotiza-item')) {
+                    // Create new list item
+                    const newListItem = document.createElement('li');
+                    newListItem.className = 'topnav__item ml-3 ml-md-5 cotiza-item';
+
+                    const newLink = document.createElement('a');
+                    newLink.href = 'Contacto.html';
+                    newLink.className = 'topnav__link';
+                    newLink.textContent = 'COTIZA AHORA';
+
+                    newListItem.appendChild(newLink);
+                    navList.insertBefore(newListItem, menuItem);
+                }
+            } else {
+                const cotizaItem = navList.querySelector('.cotiza-item');
+                if (cotizaItem) {
+                    navList.removeChild(cotizaItem);
+                }
+            }
+        };
+
+        // Check class change periodically
+        setInterval(handleClassChange, 100);
+    });
+</script>
 <script>
     async function fetchSheetData() {
         const url = 'https://script.google.com/macros/s/AKfycbzaekeVeumgMoDNvuaJQQIJErpqeJhMf4CDi1ad3pPkOxa5p5Zl5vZDcuiGmJGR6qb2/exec';  // Replace with your web app URL
