--- a/Cotización Servicios Aduanales _ Grupo Ei.html
+++ b/Cotización Servicios Aduanales _ Grupo Ei.html
@@ -939,7 +939,7 @@
 													</form>
 												</div>
 											</div>
-											<div class="tab-pane container fade" id="menu1">
+											<div class="tab-pane container fade active show" id="menu1">
 												<div class="row align-items-center">
 													<div class="col-sm-6 mb-2">
 														<div class="box-cotiza text-center">
