--- a/Cotización Servicios Aduanales _ Grupo Ei.html
+++ b/Cotización Servicios Aduanales _ Grupo Ei.html
@@ -838,6 +838,16 @@
 										formId: "11560807-3005-42de-b1fe-037d79103577"
 									});
 									</script>
+									<style>
+									a.nav-link.active,
+									a.nav-link:hover {
+										background: var(--naranja) !important;
+										border-radius: 0;
+										color: #fff !important;
+										font-family: oswald;
+										padding-bottom: 11px;
+									}
+									</style>
 									<div class="hoja-1000">
 										<ul class="nav nav-tabs">
 											<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#home">MENOS DE 10 EMBARQUES AL MES</a></li>
