--- a/Contacto.html
+++ b/Contacto.html
@@ -613,7 +613,173 @@
 </div> -->
 
 
-<section id="contact" class="shadow-host" style="background-color: #0d4088;"></section>
+<!-- <section id="questionnaire" class="shadow-host" style="background-color: #0d4088;"></section> -->
+
+<my-widget></my-widget>
+
+<script>
+    class MyWidget extends HTMLElement {
+        constructor() {
+            super();
+            const shadow = this.attachShadow({ mode: 'open' });
+            shadow.innerHTML = `
+                <style>
+                    :host {
+                        display: block;
+                        font-family: Arial, sans-serif;
+                    }
+                    .container {
+                        background-color: navy;
+                        color: white;
+                        padding: 20px;
+                        border-radius: 8px;
+                        max-width: 800px;
+                        margin: auto;
+                    }
+                    a {
+                        color: white;
+                        text-decoration: none;
+                    }
+                    a:hover {
+                        color: lightgray;
+                    }
+                    input[type="text"], input[type="phone"], input[type="email"] {
+                        background-color: navy;
+                        color: white;
+                        border: 1px solid white;
+                        padding: 10px;
+                        margin-bottom: 10px;
+                        border-radius: 4px;
+                        width: calc(100% - 22px);
+                    }
+                    .row {
+                        display: flex;
+                        justify-content: space-between;
+                        margin-bottom: 20px;
+                    }
+                    .col {
+                        flex: 1;
+                        text-align: center;
+                        padding: 10px;
+                    }
+                    .tabs {
+                        display: flex;
+                        justify-content: center;
+                        margin-bottom: 20px;
+                    }
+                    .tab {
+                        cursor: pointer;
+                        padding: 10px 20px;
+                        border: 1px solid white;
+                        border-bottom: none;
+                        background-color: navy;
+                        color: white;
+                        margin-right: 5px;
+                        border-radius: 8px 8px 0 0;
+                    }
+                    .tab.active {
+                        background-color: white;
+                        color: navy;
+                    }
+                    .tab-content {
+                        display: none;
+                        border: 1px solid white;
+                        padding: 20px;
+                        border-radius: 0 0 8px 8px;
+                        background-color: white;
+                        color: navy;
+                    }
+                    .tab-content.active {
+                        display: block;
+                    }
+                </style>
+                <div class="container">
+                    <h1 class="fs40">Cotiza tus servicios aduanales</h1>
+                    <p class="fs22"><strong>Atendemos principalmente a empresas que manejan más de 10 operaciones al mes</strong> o que tienen algún proyecto con una operación importante</p>
+                    <h2 class="fs30"><strong>Al solicitar una cotización obtendrás:</strong></h2>
+                    <div class="row">
+                        <div class="col">
+                            <img src="https://www.grupoei.com.mx/hs-fs/hubfs/site/cotizacion/cotiza-servicios-aduanales-grupoei-ic1.jpg" alt="cotiza-servicios-aduanales-grupoei-ic1" width="87">
+                            <p><strong>Respuesta de tu solicitud a la brevedad</strong></p>
+                        </div>
+                        <div class="col">
+                            <img src="https://www.grupoei.com.mx/hs-fs/hubfs/site/cotizacion/cotiza-servicios-aduanales-grupoei-ic2.jpg" alt="cotiza-servicios-aduanales-grupoei-ic2" width="76">
+                            <p><strong>Asesoría por un especialista en comercio exterior que te ayudará a resolver todas tus dudas</strong></p>
+                        </div>
+                        <div class="col">
+                            <img src="https://www.grupoei.com.mx/hs-fs/hubfs/site/cotizacion/cotiza-servicios-aduanales-grupoei-ic3.jpg" alt="cotiza-servicios-aduanales-grupoei-ic3" width="67">
+                            <p><strong>Cotización detallada de tus servicios con una tarifa flat</strong></p>
+                        </div>
+                    </div>
+                    <h2 class="fs32">Para cotizar, selecciona el número de embarques que realiza tu empresa al mes</h2>
+                    <div class="tabs">
+                        <div class="tab active" data-target="#tab1">MENOS DE 10 EMBARQUES AL MES</div>
+                        <div class="tab" data-target="#tab2">MÁS DE 10 EMBARQUES AL MES</div>
+                    </div>
+                    <div id="tab1" class="tab-content active">
+                        <div class="row">
+                            <div class="col">
+                                <script type="text/javascript" src="//js.hsforms.net/forms/v2.js" charset="utf-8"></script>
+                                <script>
+                                    hbspt.forms.create({
+                                        region: "na1",
+                                        portalId: "2039173",
+                                        formId: "11560807-3005-42de-b1fe-037d79103577"
+                                    });
+                                </script>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab2" class="tab-content">
+                        <div class="row">
+                            <div class="col">
+                                <h2 class="fs28"><strong>COMUNÍCATE CON NOSOTROS</strong></h2>
+                                <p class="fs24">Llámanos: <a href="tel:8671092143">86 7109 2143</a></p>
+                                <p class="fs24">Escríbenos al correo: <a href="mailto:comercial@grupoei.com.mx">comercial@grupoei.com.mx</a></p>
+                                <div class="fs22" style="background-color: lightgray; padding: 10px; border-radius: 4px;">
+                                    <p><strong>Horario de atención:</strong></p>
+                                    <p>Lunes a Viernes de 8:00 a 17:00 hrs</p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div style="background-color: navy; padding: 20px; border-radius: 8px;">
+                                    <p class="fs22">O si lo prefieres déjanos tus datos para contactarte:</p>
+                                    <input type="text" id="nombre" placeholder="Nombre:*">
+                                    <input type="phone" id="telefono" placeholder="Teléfono:*">
+                                    <input type="email" id="email" placeholder="Correo empresarial:*">
+                                    <p class="next" style="text-align: center; cursor: pointer;">CONTINUAR</p>
+                                    <p>*Datos obligatorios</p>
+                                    <a href="https://www.grupoei.com.mx/aviso-de-privacidad">Aviso de privacidad</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <script>
+                    const tabs = shadow.querySelectorAll('.tab');
+                    const tabContents = shadow.querySelectorAll('.tab-content');
+                    tabs.forEach(tab => {
+                        tab.addEventListener('click', () => {
+                            tabs.forEach(t => t.classList.remove('active'));
+                            tab.classList.add('active');
+                            const target = tab.getAttribute('data-target');
+                            tabContents.forEach(tc => {
+                                if (tc.id === target.substring(1)) {
+                                    tc.classList.add('active');
+                                } else {
+                                    tc.classList.remove('active');
+                                }
+                            });
+                        });
+                    });
+                </script>
+            `;
+        }
+    }
+
+    customElements.define('my-widget', MyWidget);
+</script>
+
 <style>
     /* Aligns the items vertically in the footer */
 .footer .row {
@@ -814,6 +980,7 @@
       
 </script>
 <!-- <img id="CookiebotSessionPixel" src="./Rural Estates_files/1.gif" alt="Cookiebot session tracker icon loaded" data-cookieconsent="ignore" style="display: none;"><div><div dir="ltr" id="CookiebotWidget" lang="en"><button class="CookiebotWidget-logo" aria-label="Open widget" lang="en"><svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill-rule="evenodd"><circle cx="12" cy="12" r="12"></circle><path d="M15.094 13.978c-1.146 0-1.946-.813-1.946-1.978s.8-1.978 1.946-1.978c1.145 0 1.945.813 1.945 1.978s-.8 1.978-1.945 1.978M9.07 10.022h3.883l-.094.09c-.537.515-.844 1.203-.844 1.888 0 1.738 1.294 3 3.079 3 1.786 0 3.082-1.262 3.082-3s-1.296-3-3.082-3H9.079C7.295 9 6 10.262 6 12s1.295 3 3.079 3h2.144v-1.022H9.07c-1.136 0-1.932-.813-1.937-1.978 0-1.146.815-1.978 1.937-1.978" fill="#000"></path></g></svg></button><div id="CookiebotWidget-widgetContent"></div></div><div id="CookiebotWidgetUnderlay"></div></div><style id="CookiebotWidgetStylesheet">@keyframes CookiebotWidgetFadeIn{0%{opacity:0}to{opacity:1}}#CookiebotWidget{word-wrap:break-word;left:10px;bottom:10px;animation:CookiebotWidgetFadeIn .3s ease-in;background-color:#141414;border-radius:40px;box-shadow:0 4px 16px rgba(0,0,0,.15);font-family:Helvetica,Arial,sans-serif;line-height:1.5;min-height:48px;min-width:48px;opacity:0;pointer-events:none;position:fixed;transition:all .2s ease-in;word-break:break-word;z-index:2147483631}#CookiebotWidget,#CookiebotWidget *{background:transparent;box-sizing:border-box;color:#FFFFFF;font-size:15px;letter-spacing:.1px;margin:0;outline:0;padding:0}#CookiebotWidget *{font-family:inherit}#CookiebotWidget button,#CookiebotWidget li,#CookiebotWidget strong,#CookiebotWidget svg,#CookiebotWidget ul{border:none;cursor:inherit;font-weight:inherit;line-height:1.5}#CookiebotWidget:not(.CookiebotWidget-inactive){opacity:1;pointer-events:all;transition:opacity .3s ease-in,border-radius .2s ease-in}#CookiebotWidget.CookiebotWidget-open{overflow:hidden}#CookiebotWidget:not(.CookiebotWidget-open):hover{box-shadow:0 4px 18px rgba(0,0,0,.3)}#CookiebotWidget+#CookiebotWidgetUnderlay{background:#000;height:100vh;left:0;opacity:0;pointer-events:none;position:fixed;top:0;visibility:hidden;width:100vw;z-index:2147483630}#CookiebotWidget:not(.CookiebotWidget-open) .CookiebotWidget-logo{cursor:pointer}#CookiebotWidget .CookiebotWidget-logo{display:block;transition:opacity .3s,transform .3s}#CookiebotWidget .CookiebotWidget-logo svg{display:block;height:44px;transition:all .3s;width:44px}#CookiebotWidget:not(.CookiebotWidget-open) button.CookiebotWidget-logo svg{height:48px;transition:all 0s ease;transition-delay:.2s;width:48px}#CookiebotWidget .CookiebotWidget-logo svg circle{fill:#141414}#CookiebotWidget .CookiebotWidget-logo svg path{fill:#FFFFFF}#CookiebotWidget #CookiebotWidget-widgetContent{display:flex;max-height:0;max-width:0;overflow:hidden;transition:all .2s ease-in}#CookiebotWidget.CookiebotWidget-open #CookiebotWidget-widgetContent{max-height:1000px;max-width:1000px}#CookiebotWidget.CookiebotWidget-open .CookiebotWidget-contents{max-height:calc(100vh - 10px);min-height:360px}#CookiebotWidget :focus-visible,#CookiebotWidget:not(.CookiebotWidget-open) .Cookiebotwidget-logo{outline:2px solid #1032CF;outline-offset:1px}@media screen and (max-width:600px){#CookiebotWidget:not(.CookiebotWidget-inactive){bottom:10px;left:10px}#CookiebotWidget :focus-visible,#CookiebotWidget:not(.CookiebotWidget-open) .Cookiebotwidget-logo{outline:0}}@media screen and (min-width:601px){#CookiebotWidget+#CookiebotWidgetUnderlay{display:none}}</style> -->
+
 
 
 <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
