--- a/Test.html
+++ b/Test.html
@@ -725,10 +725,10 @@
                                                    <input type="phone" name="phone" class="form-control" id="phone" placeholder="Telefóno*" required="required">
                                                 </div>
                                              </div>
-                                             <div class="col-md-12" id="msgthingy">
-                                                <!-- <div class="form-group contenteditable-container">
-                                                    <div class="form-control contenteditable" contenteditable="true" data-placeholder="Mensaje*" required="required"></div>
-                                                </div> -->
+                                             <div class="col-md-12" >
+                                                <div class="form-group contenteditable-container" id="msgthingy">
+                                                    <!-- <div class="form-control contenteditable" contenteditable="true" data-placeholder="Mensaje*" required="required"></div> -->
+                                                </div>
 
                                             </div>
                                               <div class="col-md-12">
