--- a/Test.html
+++ b/Test.html
@@ -192,7 +192,7 @@
     </header>
 
 
-<my-widget></my-widget>
+<my-widget style="display:none"></my-widget>
 
 <script>
     class MyWidget extends HTMLElement {
