--- a/Home.html
+++ b/Home.html
@@ -1305,7 +1305,7 @@ Championing climate action with our global carbon commitment                    
             });
     });
 </script> -->
-<script>
+<!-- <script>
     document.addEventListener('DOMContentLoaded', (event) => {
         const header = document.querySelector('header');
         const navList = header.querySelector('.topnav__list');
@@ -1338,7 +1338,7 @@ Championing climate action with our global carbon commitment                    
         // Check class change periodically
         setInterval(handleClassChange, 100);
     });
-</script>
+</script> -->
 <script>
     async function fetchSheetData() {
         const url = 'https://script.google.com/macros/s/AKfycbzaekeVeumgMoDNvuaJQQIJErpqeJhMf4CDi1ad3pPkOxa5p5Zl5vZDcuiGmJGR6qb2/exec';  // Replace with your web app URL
