removed cotiza ahora

--- a/Aduanas.html
+++ b/Aduanas.html
@@ -201,7 +201,7 @@
             </div> 
                 <div class="header__line mx-3 mx-md-4"></div>
             </header>
-            <script>
+            <!-- <script>
                 document.addEventListener('DOMContentLoaded', (event) => {
                     const header = document.querySelector('header');
                     const navList = header.querySelector('.topnav__list');
@@ -234,7 +234,7 @@
                     // Check class change periodically
                     setInterval(handleClassChange, 100);
                 });
-            </script>
+            </script> -->
                     
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
