--- a/Certificaciones.html
+++ b/Certificaciones.html
@@ -211,7 +211,7 @@
         <div class="header__line mx-3 mx-md-4"></div>
     </header>
     
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             const header = document.querySelector('header');
             const navList = header.querySelector('.topnav__list');
@@ -244,7 +244,7 @@
             // Check class change periodically
             setInterval(handleClassChange, 100);
         });
-    </script>
+    </script> -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const menuButton = document.querySelector('.topnav__menuButton');
