--- a/Nosotros.html
+++ b/Nosotros.html
@@ -184,7 +184,7 @@
         <div class="header__line mx-3 mx-md-4"></div>
     </header>
     
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             const header = document.querySelector('header');
             const navList = header.querySelector('.topnav__list');
@@ -217,7 +217,7 @@
             // Check class change periodically
             setInterval(handleClassChange, 100);
         });
-    </script>
+    </script> -->
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
