--- a/Reportes_en_linea.html
+++ b/Reportes_en_linea.html
@@ -200,7 +200,7 @@
             </div> 
                 <div class="header__line mx-3 mx-md-4"></div>
             </header>
-            <script>
+            <!-- <script>
                 document.addEventListener('DOMContentLoaded', (event) => {
                     const header = document.querySelector('header');
                     const navList = header.querySelector('.topnav__list');
@@ -233,7 +233,7 @@
                     // Check class change periodically
                     setInterval(handleClassChange, 100);
                 });
-            </script>
+            </script> -->
                     
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
