--- a/Test.html
+++ b/Test.html
@@ -921,7 +921,7 @@
       });
       
 </script>
-<script>
+<!-- <script>
     document.addEventListener('DOMContentLoaded', (event) => {
         const header = document.querySelector('header');
         const navList = header.querySelector('.topnav__list');
@@ -954,7 +954,7 @@
         // Check class change periodically
         setInterval(handleClassChange, 100);
     });
-</script>
+</script> -->
 <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script>
   window.botpressWebChat.init({
