a lot more changes

--- a/Aduanas.html
+++ b/Aduanas.html
@@ -1472,7 +1472,7 @@
 
 
 
-<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<!-- <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script>
   window.botpressWebChat.init({
       "composerPlaceholder": "Chat with Muris Salinas Consultores",
@@ -1492,7 +1492,7 @@
       "theme": "prism",
       "themeColor": "#2563eb"
   });
-</script> 
+</script>  -->
 <script>
     document.addEventListener('contextmenu', function(e) {
       e.preventDefault();
