--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1724,7 +1724,7 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
       });
       
 </script>
-<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<!-- <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script>
   window.botpressWebChat.init({
       "composerPlaceholder": "Chat with Muris Salinas Consultores",
@@ -1744,7 +1744,7 @@ line-height: calc(16px + (20 * ((100vw - 288px) / 1612)));">
       "theme": "prism",
       "themeColor": "#2563eb"
   });
-</script>  
+</script>   -->
 <!-- <script>
 	document.addEventListener('contextmenu', function(e) {
 	  e.preventDefault();
