--- a/Precensia.html
+++ b/Precensia.html
@@ -877,7 +877,7 @@
 
 
 </style>
-<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<!-- <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script>
   window.botpressWebChat.init({
       "composerPlaceholder": "Chat with Muris Salinas Consultores",
@@ -897,7 +897,7 @@
       "theme": "prism",
       "themeColor": "#2563eb"
   });
-</script> 
+</script>  -->
 <script>
     document.addEventListener('contextmenu', function(e) {
       e.preventDefault();
