another  image fix

--- a/Home.html
+++ b/Home.html
@@ -847,7 +847,7 @@ Championing climate action with our global carbon commitment                    
                 <a  class="twobyonewidget__box textcolour--white">
                             <div class="twobyonewidget__box__image twobyonewidget__box__image--centeralign
 						      
-						      twobyonewidget__box__image--overlay" style="background-image: url(&#39;./Images/seguimento2.webp&#39;);filter:brightness(0.5)">
+						      twobyonewidget__box__image--overlay" style="background-image: url(&#39;./Images/computere.png&#39;);filter:brightness(0.5)">
                             </div>
                 <div class="pt-2 pr-2 pb-6 pb-md-2 pt-md-4 px-md-7 twobyonewidget__box__text" style="padding-left:23px">
                     <h3>
